fix accessibility, seo

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,9 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Profile Card</title>
+    <title>Zola Profile Card</title>
+    <meta name="title" content="Zola Profile Card" />
+    <meta name="description" content="A simple profile card for Zola." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ get_url(path='style.css') | safe }}">
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
