--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
         </div>
     </div>
     <div class="profile-picture">
-        <img src="https://placehold.co/200x200" width="200" height="200" />
+        <img alt="Profile Picture" src="https://placehold.co/200x200" width="200" height="200" />
     </div>
 </div>
 {% endblock content %}
